<resources>
    <string name="app_name">Quaderno Torneo</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="action_refresh">Refresh</string>
    <string name="elimina_partita">Elimina</string>
    <string name="crea_pdf">Crea PDF</string>
    <string name="gol">Gol</string>
    <string name="ammonisci">Ammonisci</string>
    <string name="espelli">Espelli</string>
    <string name="quaderno">Quaderno del Torneo</string>
    <string name="salva">Salva</string>
    <string name="autogol">Autogol</string>
    <string name="action_reset">Reset classifica</string>
    <string name="action_calcola">Calcola classifica</string>
    <string name="action_marcatori">Aggiorna marcatori</string>
</resources>
